--- a/src/components/feed/Post.css
+++ b/src/components/feed/Post.css
@@ -10,6 +10,7 @@
 }
 .post_info {
   margin-left: 10px;
+  text-align: left;
 }
 .post_info > p {
   font-size: 12px;
@@ -17,11 +18,21 @@
 }
 .post_info > h2 {
   font-size: 15px;
+  margin-top: 5px;
 }
 .post_body {
   overflow-wrap: anywhere;
+  text-align: left;
 }
 .post_buttons {
   display: flex;
   justify-content: space-evenly;
+}
+@media only screen and (max-width: 600px) {
+  .post_buttons {
+    display: flex;
+    justify-content: space-evenly;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
 }
