--- a/src/components/widgets/Widgets.css
+++ b/src/components/widgets/Widgets.css
@@ -55,3 +55,11 @@
   font-size: 12;
   color: gray;
 }
+@media only screen and (max-width: 600px) {
+  .widgets {
+    position: relative;
+    top: 0;
+    margin: 20px;
+    width: 90%;
+  }
+}
