--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   border-bottom: 0.1px solid lightgray;
-  padding: 10px;
+  padding: 10px 0px;
   width: 100%;
   position: sticky;
   top: 0;
